# ExFlash_Algorithm

./: .gitignore  ART_PI_引脚分布.xlsx  README.md
1.外置Flash下载算法参考文档/IAR/: Debugging a Custom Flash Loader  IAR Systems.md
1.外置Flash下载算法参考文档/KEIL/: Reference Links.md
2.EmbedFire_H750_DUAL_QSPI/1.DataSheet/: STM32H750X_CORE_引脚分布.xlsx
2.EmbedFire_H750_DUAL_QSPI/2.Algorithm/: README.md
2.EmbedFire_H750_DUAL_QSPI/2.Algorithm/FLM/: STM32H750XB_DUAL_W25Q256JV.FLM
2.EmbedFire_H750_DUAL_QSPI/2.Algorithm/STLDR/: .cproject  .mxproject  .project  DUAL-W25Q256JV_H750Pro.stldr  STM32H750XBHX_FLASH.ld  stm32h750xb Debug.launch  stm32h750xb.ioc
2.EmbedFire_H750_DUAL_QSPI/2.Algorithm_FLM/: stm32h750xb.ioc  ~$STM32H750X_CORE_引脚分布.xlsx
2.EmbedFire_H750_DUAL_QSPI/2.Algorithm_FLM/MDK-ARM/: stm32h750xb+stm32h750xb.cprj  stm32h750xb.cbuild-idx.yml  stm32h750xb.cbuild-pack.yml  stm32h750xb.cproject.yml  stm32h750xb.csolution.yml  stm32h750xb.uvguix.10751  stm32h750xb.uvoptx  stm32h750xb.uvprojx  vcpkg-configuration.json
2.EmbedFire_H750_DUAL_QSPI/3.Bootloader/: .mxproject  stm32h750xb.ioc
2.EmbedFire_H750_DUAL_QSPI/3.Bootloader/MDK-ARM/: stm32h750xb.uvguix.10751  stm32h750xb.uvoptx  stm32h750xb.uvprojx
2.EmbedFire_H750_DUAL_QSPI/4.Application/: .mxproject  stm32h750xb.ioc
2.EmbedFire_H750_DUAL_QSPI/4.Application/MDK-ARM/: stm32h750xb.uvguix.10751  stm32h750xb.uvoptx  stm32h750xb.uvprojx
2.EmbedFire_H750_DUAL_QSPI/5.QSPI_TSET/: .mxproject  STM32H750X_CORE_引脚分布.xlsx  stm32h750xb.ioc
2.EmbedFire_H750_DUAL_QSPI/5.QSPI_TSET/MDK-ARM/: stm32h750xb+stm32h750xb.cbuild.yml  stm32h750xb.uvguix.10751  stm32h750xb.uvoptx  stm32h750xb.uvprojx  stm32h750xb_stm32h750xb.sct
2.EmbedFire_H750_DUAL_QSPI/5.QSPI_TSET/MDK-ARM/tmp/stm32h750xb/stm32h750xb/: .ninja_log  CMakeLists.txt
ART-PI/: ART_PI_引脚分布.xlsx
ART-PI/Algorithm_QSPI/: README.md
ART-PI/Algorithm_QSPI/FLM/: .mxproject  FLM.ioc  FlashDev.c  FlashPrg.c  STM32H750_ArtPi_W25Q64JV.FLM  w25qxx.h
ART-PI/Algorithm_QSPI/STLDR/: Loader_Src.c  STLDR.ioc  w25qxx.h
ART-PI/Algorithm_SPI/: Dev_Inf.c  Dev_Inf.h  Loader_Src.c  README.md  w25q128jv.c  w25q128jv.h
ART-PI/Algorithm_SPI/MDK-ARM/: spi_stldr.uvguix.u  spi_stldr.uvguix.喵小黑  spi_stldr.uvoptx  spi_stldr.uvprojx
ART-PI/STM32H750XBH_ARTPIQSPI_W25Q64JV/: Loader_Src.c  STM32H750XBH_ARTPIQSPI_W25Q64JV.ioc  w25q64jv.c  w25q64jv.h  w25q64jvx.c  w25q64jvx.h
ART-PI/STM32H750XBH_ARTPIQSPI_W25Q64JV/MDK-ARM/: STM32H750XBH_ARTPIQSPI_W25Q64JV.uvguix.喵小黑
Algorithm_QSPI/FLM/: FLM.ioc  FlashDev.c  FlashPrg.c  w25qxx.c
Algorithm_QSPI/FLM/MDK-ARM/: FLM.uvguix.喵小黑  FLM.uvoptx
Algorithm_QSPI/FLM_HSE/: .mxproject  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.ioc
Algorithm_QSPI/FLM_HSE/Algorithms/: ArtPi_QSPI_W25Q64JV.FLM
Algorithm_QSPI/FLM_HSE/Loader/: FlashPrg.c.orig
Algorithm_QSPI/FLM_HSE/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.BAT  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvguix.喵小黑  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvoptx
Algorithm_QSPI/FLM_HSI/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvoptx  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvprojx
Algorithm_QSPI/STLDR/: Dev_Inf.c  STLDR.ioc  STM32H750XB_ArtPi_W25Q64JV.stldr
Algorithm_QSPI/STLDR/MDK-ARM/: STLDR.uvoptx  STLDR.uvprojx
Algorithm_QSPI/STLDR_HSE/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.ioc
Algorithm_QSPI/STLDR_HSE/Algorithms/: ArtPi_QSPI_W25Q64JV.stldr
Algorithm_QSPI/STLDR_HSE/Linkers/: Loader.sct
Algorithm_QSPI/STLDR_HSE/Loader/: Dev_Inf.c
Algorithm_QSPI/STLDR_HSE/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvoptx
Algorithm_QSPI/STLDR_HSI/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvguix.喵小黑  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvoptx  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvprojx
Algorithm_SPI/: Dev_Inf.c  Loader_Src.c  README.md  w25q128jv.c  w25q128jv.h
Algorithm_SPI/Core/Inc/: main.h  stm32h7xx_hal_conf.h
Algorithm_SPI/Core/Src/: gpio.c  main.c  spi.c
Algorithm_SPI/MDK-ARM/: spi_stldr.uvguix.u  spi_stldr.uvguix.喵小黑  spi_stldr.uvoptx  spi_stldr.uvprojx
Algorithm_SPI/MDK-ARM/spi_stldr/: spi_stldr.axf  spi_stldr.build_log.htm  spi_stldr.htm  spi_stldr.lnp  spi_stldr_spi_stldr.dep
FLM_HSE/Core/Src/: main.c
FLM_HSE/Loader/: FlashDev.c  FlashPrg.c
FLM_HSE/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvguix.喵小黑  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvoptx
FLM_HSE/MDK-ARM/Output/: ArtPi_QSPI_W25Q64JV.htm  quadspi.crf  stm32h7xx_hal_gpio.crf  stm32h7xx_hal_i2c_ex.crf  stm32h7xx_hal_mdma.crf  stm32h7xx_hal_pwr.crf  tim.crf
FLM_HSI/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.ioc
FLM_HSI/Core/Src/: main.c
FLM_HSI/Linkers/: Target.lin
FLM_HSI/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_FLM.uvguix.喵小黑
FLM_HSI/MDK-ARM/Output/: ArtPi_QSPI_W25Q64JV.axf  main.crf  stm32h7xx_hal_dma.crf  stm32h7xx_hal_dma_ex.crf  stm32h7xx_hal_flash_ex.crf  stm32h7xx_hal_hsem.crf  stm32h7xx_hal_msp.crf  stm32h7xx_hal_pwr_ex.crf  stm32h7xx_hal_qspi.crf
STLDR_HSE/Linkers/: Target.lin
STLDR_HSE/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvguix.喵小黑  STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvprojx  startup_stm32h750xx.lst
STLDR_HSE/MDK-ARM/Output/: ArtPi_QSPI_W25Q64JV.build_log.htm  quadspi.crf  stm32h7xx_hal_i2c_ex.crf  stm32h7xx_hal_mdma.crf  stm32h7xx_hal_msp.crf  stm32h7xx_hal_tim_ex.crf  stm32h7xx_it.crf
STLDR_HSI/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.ioc
STLDR_HSI/Core/Src/: gpio.c  main.c
STLDR_HSI/Loader/: Loader_Src.c
STLDR_HSI/MDK-ARM/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.uvguix.喵小黑
STLDR_HSI/MDK-ARM/Output/: STM32H750XBH6_ArtPi_QSPI_W25Q64JV_STLDR.axf  gpio.crf  main.crf  (+6 more)
STM32H750XBH_ARTPIQSPI_W25Q64JV/: STM32H750XBH_ARTPIQSPI_W25Q64JV.stldr  w25q64jvx.c  w25q64jvx.h
STM32H750XBH_ARTPIQSPI_W25Q64JV/MDK-ARM/: STM32H750XBH_ARTPIQSPI_W25Q64JV.uvguix.Li Chuang  STM32H750XBH_ARTPIQSPI_W25Q64JV.uvoptx  STM32H750XBH_ARTPIQSPI_W25Q64JV.uvprojx
dual_qspi/MDK-ARM/: stm32h750xb.cbuild-set.yml  stm32h750xb.uvguix.10751  stm32h750xb.uvoptx
embedfire/: readme.md
embedfire/STM32H750XB/: CMakeLists.txt
embedfire/test/: CMakeLists.txt  stm32h750xb.ioc
(+590 files in other folders)
